<!--
  ~ Copyright (c) 2020 Proton Technologies AG
  ~ This file is part of Proton Technologies AG and ProtonCore.
  ~
  ~ ProtonCore is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ProtonCore is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with ProtonCore.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">CoreExample</string>
    <string name="human_verification">Human Verification</string>
    <string name="custom_views">Custom Views</string>
    <string name="proton_compose_ui">Compose UI Views</string>
    <string name="text_styles">Text styles</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="current_accounts">Current Accounts:</string>
    <string name="force_update">Force Update</string>
    <string name="trigger_human_ver">Trigger HV</string>
    <string name="username_available">Username available</string>
    <string name="payments_upgrade">Payments (upgrade primary)</string>
    <string name="signup_internal">Signup Internal</string>
    <string name="signup_external">Signup External</string>
    <string name="signup_username">Signup Username</string>
    <string name="payments_signup">Payments (signup)</string>
    <string name="plans_signup">Plans Signup</string>
    <string name="plans_upgrade">Plans Upgrade</string>
    <string name="plans_current">Plans Current</string>
    <string name="settings_recovery_email">Recovery Email</string>
    <string name="settings_password_management">Password Mng</string>
    <string name="contacts">Contacts</string>
    <string name="confirm_password_locked">CP locked</string>
    <string name="confirm_password">CP pass</string>
    <string name="lock_scopes">Lock</string>

    <string name="example_hint">Hint</string>
    <string name="example_hint_disabled">Hint Disabled input</string>
    <string name="example_label">Label</string>
    <string name="example_suffix_label">Suffix Label</string>
    <string name="example_assistive_text">Assistive text</string>
    <string name="example_assistive_text_disabled">Disabled Input Assistive text</string>

    <string name="example_password_hint">Password Hint</string>
    <string name="example_password_label">Password Label</string>
    <string name="example_password_assistive_text">Password Assistive text</string>

    <string name="example_error_hint">Error Hint</string>
    <string name="example_error_label">Error Label</string>
    <string name="example_error_assistive_text">Error Assistive text</string>

    <string name="example_multiline_hint">Multiline Hint</string>
    <string name="example_multiline_label">Multiline Label</string>
    <string name="example_multiline_assistive_text">Multiline Assistive text</string>

    <string name="example_default_button">Default text</string>
    <string name="example_text_only">Text only</string>
    <string name="example_outlined">Outlined</string>
    <string name="example_loading">Loading</string>
    <string name="example_loading_text_only">Loading</string>
    <string name="example_secondary_button">Secondary</string>

    <string name="example_switch_label1">Switch 1</string>
    <string name="example_switch_label2">Switch 2</string>

    <string name="example_check_box_label1">Switch 1</string>
    <string name="example_check_box_label2">Switch 2</string>
    <string name="example_check_box_label3">Switch 3</string>

    <string name="example_radio1_label">Radio button 1</string>
    <string name="example_radio2_label">Radio button 2</string>

    <string name="example_tab1">Tab 1</string>
    <string name="example_tab2">Tab 2</string>
    <string name="example_tab3">Tab 3</string>

    <string name="example_username_hint">Username</string>
    <string name="example_username_assistive_text">Username (to logout if already logged in)</string>
    <string name="example_username_label">Username</string>

    <string name="proton_text_headline">Proton.Text.Headline</string>
    <string name="proton_text_headline_hint">Proton.Text.Headline.Hint</string>
    <string name="proton_text_headline_small">Proton.Text.Headline.Small</string>
    <string name="proton_text_default">Proton.Text.Default</string>
    <string name="proton_text_default_bold">Proton.Text.Default.Bold</string>
    <string name="proton_text_default_medium">Proton.Text.Default.Medium</string>
    <string name="proton_text_default_weak">Proton.Text.Default.Weak</string>
    <string name="proton_text_default_hint">Proton.Text.Default.Hint</string>
    <string name="proton_text_default_inverted">Proton.Text.Default.Inverted</string>
    <string name="proton_text_default_small">Proton.Text.DefaultSmall</string>
    <string name="proton_text_default_small_medium">Proton.Text.DefaultSmall.Medium</string>
    <string name="proton_text_default_small_weak">Proton.Text.DefaultSmall.Weak</string>
    <string name="proton_text_default_small_inverted">Proton.Text.DefaultSmall.Inverted</string>
    <string name="proton_text_caption">Proton.Text.Caption</string>
    <string name="proton_text_caption_strong">Proton.Text.Caption.Strong</string>
    <string name="proton_text_caption_weak">Proton.Text.Caption.Weak</string>
    <string name="proton_text_caption_hint">Proton.Text.Caption.Hint</string>

    <plurals name="pushes_activity_title">
        <item quantity="one">%d push</item>
        <item quantity="other">%d pushes</item>
    </plurals>
</resources>
